@@ -23,9 +23,7 @@
 		</Options>
 		
 		<Project name = "${ProjectName}" directory = "." type = "IPhone">
-			<Options MainNibFile="MainWindow.nib">
-				<SdkVersion>3.2</SdkVersion>
-			</Options>
+			<Options MainNibFile="MainWindow.nib" SdkVersion="3.2" />
 			<References>
 				<Reference type="Gac" refto="System, Version=2.0.5.0, Culture=neutral, PublicKeyToken=7cec85d7bea7798e" />
 				<Reference type="Gac" refto="System.Xml, Version=2.0.5.0, Culture=neutral, PublicKeyToken=7cec85d7bea7798e" />
